# hmmer3

./: .clang-format  .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: release-h3daemon.yml  release-h3result-py.yml  release-hmmer-py.yml  release-hmmer-tables.yml  test-h3client.yml  test-h3daemon.yml  test-h3result-py.yml  test-h3result.yml  test-hmmer-py.yml  test-hmmer-reader.yml  test-hmmer-tables.yml
h3client/: .gitignore  CMakeLists.txt  Makefile  README.md  amsg.c  answer.c  answer.h  array_size.h  body.c  body.h  bsd.h  buff.c  buff.h  cco.h  compiler.h  copy_string.h  deadline.c  defer_return.h  dialer.c  discard.h  file_hash.c  file_hash.h  fini.c  full_recv.h  full_send.h  h3c_clock.c  h3c_clock.h  h3c_deadline.c  h3c_deadline.h  h3c_dialer.c  h3c_dialer.h  h3c_errno.h  h3c_errnum.h  h3c_fini.c  h3c_fini.h  h3c_result.c  h3c_result.h  h3c_socket.c  h3c_socket.h  h3c_stream.c  (+45 more)
h3client/cmake/: CPM.cmake
h3client/include/h3client/: deadline.h  dialer.h  errno.h  export.h  fini.h  h3client.h  result.h  stream.h  strerror.h
h3client/src/: alidisplay.c  alidisplay.h  amsg.c  amsg.h  answer.c  answer.h  argless.c  argless.h  buff.c  buff.h  compiler.h  dialer.c  dialer.h  domain.c  domain.h  echo.c  echo.h  hit.c  hit.h  hmsg.c  itoa.c  msg.c  msg.h  nnge.c  nnge.h  result.c  result.h  stats.c  stats.h  stream.c  strerror.c  timeout.c  tophits.c  tophits.h  utils.c  utils.h  zc.c
h3client/src/hmmd/: alidisplay.c  domain.c  domain.h  hit.c  hmmd.h  stats.c  stats.h  status.c  tophits.c  zsetby.c  zsetby.h
h3client/tests/: CMakeLists.txt  corrupt.c  fs.c  fs.h  helper.c  helper.h  hope.h  hope_support.h  multi.c  single.c  stop_daemon.sh
h3client/tests/assets/: ross.5.hmm  ross.fasta  ross.poor.fasta
h3daemon/: README.md  TODO.txt  pyproject.toml
h3daemon/h3daemon/: __init__.py  cli.py  connect.py  daemon.py  daemonize.py  debug.py  ensure_pressed.py  errors.py  fixstreams.py  healthy.py  hmmfile.py  manager.py  master.py  pidfile.py  polling.py  port.py  portfile.py  possess.py  sched.py  tcp.py  worker.py
h3daemon/tests/: conftest.py  test_daemon.py
h3daemon/tests/files/: minifam.hmm
h3result/: CMakeLists.txt  Makefile  README.md  alidisplay.c  alidisplay.h  bsd.h  domain.c  domain.h  echo.c  echo.h  expect.c  expect.h  export.h  fdup.h  h3r_alidisplay.c  h3r_alidisplay.h  h3r_domain.c  h3r_domain.h  h3r_hit.c  h3r_hit.h  h3r_result.c  h3r_result.h  h3r_stats.c  h3r_stats.h  h3r_tophits.c  h3r_tophits.h  h3r_zsetby.h  h3result-config.cmake.in  h3result.c  h3result.h  h3result_struct.h  hit.c  hit.h  max.h  rc.h  read.h  reallocf.c  reallocf.h  static_assert.h  static_assert2.h  (+11 more)
h3result-py/: .gitignore  README.md  build_ext.py  pyproject.toml
h3result-py/h3result/: __init__.py  error.py  h3result.py  interface.h  read_h3result.py
h3result-py/tests/: test_h3result.py
h3result-py/tests/files/: domains.txt  domains_table.txt  h3result.mp  targets.txt  targets_table.txt
hmmer-py/: .gitignore  LICENSE  README.md  build_hmmer.py  build_hmmer.sh  pyproject.toml
hmmer-py/hmmer/: __init__.py
hmmer-py/tests/: test_hmmpgmd.py  test_press.py
hmmer-reader/: .gitignore  CMakeLists.txt  Makefile  README.md  aux.h  aye.h  corrupted1.hmm  corrupted5.hmm  corrupted7.hmm  error.c  error.h  fsm.c  fsm.h  hmmer_reader-config.cmake.in  hmmer_reader.c  hmmer_reader.h  hmr.c  hmr.h  hmr_error.h  hmr_hmmer_reader.h  hmr_node.h  hmr_prof.h  hmr_rc.h  hmr_struct.h  hmr_trans.h  hope_support.h  node.c  node.h  position.h  posix.h  prof.c  prof.h  profile.c  profile.h  strtok_reentrant.h  test_hmr.c  to.c  to.h  tok.c  token.c  (+2 more)
hmmer-reader/data/: corrupted2.hmm  corrupted8.hmm
hmmer-reader/include/hmmer_reader/: aux.h  export.h  hmmer_reader.h  node.h  prof.h  state.h  tok.h
hmmer-reader/src/: aux.c  error.c  fsm.c  fsm.h  hmr.c  node.c  prof.c  to.c  to.h  tok.c  tok.h
hmmer-reader/test/: CMakeLists.txt  corrupted3.hmm  corrupted4.hmm  corrupted6.hmm  hope.h  hope_support.h  noacc.hmm  read_hmm.c
hmmer-tables/: README.md  pyproject.toml
hmmer-tables/hmmer_tables/: cleanup.py  cli.py  csv_iter.py  domtbl.py  interval.py  output.py  path_like.py  query.py  tbl.py
hmmer-tables/tests/: conftest.py  test_domtbl.py  test_output.py  test_query.py  test_tbl.py
hmmer-tables/tests/files/: domtbl.txt  output.txt  output2.txt  output3.txt  output4.txt  query.txt  tbl.txt
