[tool.poetry]
name = "h3daemon"
version = "0.14.6"
description = "HMMER server"
authors = ["Danilo Horta <horta@ebi.ac.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
psutil = "^6.1.0"
typer = "^0.12"
hmmer = "^3.4.0.0"
python-daemon = "^3.1.0"
pidlockfile = "^0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
h3daemon = 'h3daemon.cli:app'
