[tool.poetry]
name = "h3daemon"
version = "0.16.4"
description = "HMMER server"
authors = ["Danilo Horta <horta@ebi.ac.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
psutil = "^6.1.0"
typer = { version = "^0.13.0", optional = true }
hmmer = "^3.4.0.2"
python-daemon = "^3.1.0"
pidlockfile = "^0.3"
deciphon-schema = "^0.1.2"
tenacity = "^9.0.0"

[tool.poetry.extras]
cli = ["typer"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
h3daemon = 'h3daemon.cli:app'
