[tool.poetry]
name = "h3result"
version = "0.3.2"
description = "Python wrapper for h3result library."
authors = ["Danilo Horta <horta@ebi.ac.uk>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "h3result" }]
include = [
  { path = "h3result/*.so", format = "wheel" },
  { path = "h3result/*.pyd", format = "wheel" },
  { path = "h3result/lib/lib*", format = "wheel" },
  { path = "build_ext.py", format = "sdist" },
]

[tool.poetry.dependencies]
cffi = "^1.16"
python = "^3.9"

[tool.poetry.build]
script = "build_ext.py"
generate-setup-file = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"

[build-system]
requires = [
  "poetry-core",
  "cffi",
  "cmake",
  "patchelf;sys_platform=='linux'",
  "setuptools;python_version>='3.12'",
]
build-backend = "poetry.core.masonry.api"

[tool.cibuildwheel]
skip = ["*i686"]

[tool.cibuildwheel.linux]
archs = ["auto", "aarch64"]
