[tool.poetry]
name = "hmmer-tables"
version = "0.5.4"
description = "Read tables produced by HMMER software."
authors = ["Danilo Horta <horta@ebi.ac.uk>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "hmmer_tables" }]

[tool.poetry.dependencies]
python = "^3.9"
deciphon-intervals = "^0.1.1"
more-itertools = "^10.2.0"
pydantic = "^2.6.1"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.3.2"

[tool.poetry.scripts]
hmmer-tables = 'hmmer_tables.cli:app'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
