[tool.poetry]
name = "hmmer-tables"
version = "0.6.1"
description = "Read tables produced by HMMER software."
authors = ["Danilo Horta <horta@ebi.ac.uk>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "hmmer_tables" }]

[tool.poetry.dependencies]
python = "^3.9"
deciphon-intervals = "^0.1"
more-itertools = "^10.2"
pydantic = "^2.7"
typer = "^0.12"

[tool.poetry.scripts]
hmmer-tables = 'hmmer_tables.cli:app'

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
