[project]
name = "hmmer-tables"
version = "1.0.2"
description = "Read tables produced by HMMER software."
authors = [{ name = "Danilo Horta", email = "horta@ebi.ac.uk" }]
requires-python = "~=3.9"
readme = "README.md"
license = "MIT"
dependencies = [
    "deciphon-intervals>=1.0.0,<2",
    "more-itertools~=10.2",
    "pydantic~=2.7",
    "typer>=0.12,<0.13",
]

[project.scripts]
hmmer-tables = "hmmer_tables.cli:app"

[dependency-groups]
dev = ["pytest~=8.2"]

[tool.hatch.build.targets.sdist]
include = ["hmmer_tables"]

[tool.hatch.build.targets.wheel]
include = ["hmmer_tables"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
